<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.home.HomeFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_registered_accounts"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/qrCodeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_qr_code_button_title"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/inBandAuthenticationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_in_band_authentication_button_title"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/deregisterButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_deregister_button_title"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/changePinButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_change_pin_button_title"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/changePasswordButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_change_password_button_title"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/changeDeviceInformationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_change_device_information_button_title"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/authCloudRegistrationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_auth_cloud_registration_button_title"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/deleteAuthenticatorsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_delete_authenticators_button_title"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/softwareDeliveredOnlyLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_identity_suite_only"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/inBandRegistrationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_in_band_registration_button_title"
            android:layout_marginBottom="64dp" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
