<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.changeDeviceInformation.ChangeDeviceInformationFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftVerticalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightVerticalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/change_device_information_title"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline"
        app:layout_constraintEnd_toEndOf="@id/rightVerticalGuideline"
        app:layout_constraintStart_toStartOf="@id/leftVerticalGuideline" />

    <TextView
        android:id="@+id/currentNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/change_device_information_current_name"
        app:layout_constraintStart_toStartOf="@id/leftVerticalGuideline"
        app:layout_constraintTop_toBottomOf="@id/titleTextView" />

    <TextView
        android:id="@+id/currentNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@id/rightVerticalGuideline"
        app:layout_constraintStart_toEndOf="@id/currentNameLabel"
        app:layout_constraintTop_toBottomOf="@id/titleTextView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newNameTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/change_device_information_hint_new_name"
        app:errorEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="@id/rightVerticalGuideline"
        app:layout_constraintStart_toStartOf="@id/leftVerticalGuideline"
        app:layout_constraintTop_toBottomOf="@id/currentNameTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newNameTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/change_device_information_confirm_button_title"
        app:layout_constraintEnd_toEndOf="@id/rightVerticalGuideline"
        app:layout_constraintStart_toStartOf="@id/leftVerticalGuideline"
        app:layout_constraintTop_toBottomOf="@+id/newNameTextInputLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>