<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authCloudRegistration.AuthCloudRegistrationFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftVerticalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightVerticalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/auth_cloud_registration_title"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline"
        app:layout_constraintEnd_toEndOf="@id/rightVerticalGuideline"
        app:layout_constraintStart_toStartOf="@id/leftVerticalGuideline" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enrollResponseTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/auth_cloud_registration_hint_enroll_response"
        app:errorEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="@id/rightVerticalGuideline"
        app:layout_constraintStart_toStartOf="@id/leftVerticalGuideline"
        app:layout_constraintTop_toBottomOf="@id/titleTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enrollResponseTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="3" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/appLinkUriTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/auth_cloud_registration_hint_app_link_uri"
        app:errorEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="@id/rightVerticalGuideline"
        app:layout_constraintStart_toStartOf="@id/leftVerticalGuideline"
        app:layout_constraintTop_toBottomOf="@id/enrollResponseTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/appLinkUriTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="3" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/auth_cloud_registration_confirm_button_title"
        app:layout_constraintEnd_toEndOf="@id/rightVerticalGuideline"
        app:layout_constraintStart_toStartOf="@id/leftVerticalGuideline"
        app:layout_constraintTop_toBottomOf="@+id/appLinkUriTextInputLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>